deploy: 3e5e655a8fa60bb8a0255fc787c1668e612e3d46

--- a/de/index.html
+++ b/de/index.html
@@ -700,6 +700,7 @@ window.addEventListener('click',(e)=>{
                     <p>Hunderttausende Menschen vertrauen bereits SimpleX-Messaging.</p>
                     <p>Finden Sie Ihre Communities im SimpleX-Verzeichnis und erstellen Sie Ihre Eigenen!</p>
                     <a class="gradient-text" href="/directory">SimpleX-Verzeichnis anzeigen</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">17:00 UTC</a>, 01/20.</p>
                 </div>
             </div>
         </section>
