--- a/ro/index.html
+++ b/ro/index.html
@@ -691,6 +691,7 @@ window.addEventListener('click',(e)=>{
                     <p>Hundreds of thousands people already trust SimpleX messaging.</p>
                     <p>Find your communities in SimpleX directory and create your own!</p>
                     <a class="gradient-text" href="/directory">View SimpleX Directory</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">17:00 UTC</a>, 01/20.</p>
                 </div>
             </div>
         </section>
