--- a/ru/index.html
+++ b/ru/index.html
@@ -700,6 +700,7 @@ window.addEventListener('click',(e)=>{
                     <p>Сотни тысяч людей уже доверяют мессенджеру SimpleX.</p>
                     <p>Найдите группы по душе в каталоге SimpleX и создайте свои!</p>
                     <a class="gradient-text" href="/directory">Открыть каталог SimpleX</a>
+                    <p class="gradient-text">Under maintenance &mdash; you can't join these groups until <a href="https://time.is/UTC" target="_blank">17:00 UTC</a>, 01/20.</p>
                 </div>
             </div>
         </section>
