--- a/transparency/index.html
+++ b/transparency/index.html
@@ -761,10 +761,10 @@ window.addEventListener('click',(e)=>{
                         </div>
                     </div> -->
                     <div><h1 id="transparency-reports" tabindex="-1">Transparency Reports</h1>
-<p><strong>Updated</strong>: Jan 15, 2025</p>
+<p><strong>Updated</strong>: Feb 09, 2026</p>
 <p>SimpleX Chat Ltd. is a company registered in the UK – it develops communication software enabling users to operate and communicate via SimpleX network, without user profile identifiers of any kind, and without having their data hosted by any network infrastructure operators.</p>
 <p>This page will include any and all reports on requests for user data.</p>
-<p><em>To date, we received none</em>.</p>
+<p>In 2025 we received 12 requests from law enforcement of different countries. No responsive information was identified/provided.</p>
 <p>In 2024 we received enquiries from several law enforcement agencies seeking information on our procedures for handling data requests. We responded by noting that we operate under the UK law and will consider such requests pursuant to UK law.</p>
 <p>Our objective is to consistently ensure that no user data and absolute minimum of the metadata required for the network to function is available for disclosure by any infrastructure operators, under any circumstances.</p>
 <p><strong>Helpful resources</strong>:</p>
@@ -785,7 +785,7 @@ window.addEventListener('click',(e)=>{
 </ul>
 </li>
 </ul>
-<p>Have a more specific question? Reach out to us via <a href="https://simplex.chat/contact#/?v=1&amp;smp=smp%3A%2F%2FPQUV2eL0t7OStZOoAsPEV2QYWt4-xilbakvGUGOItUo%3D%40smp6.simplex.im%2FK1rslx-m5bpXVIdMZg9NLUZ_8JBm8xTt%23%2F%3Fv%3D1%26dh%3DMCowBQYDK2VuAyEALDeVe-sG8mRY22LsXlPgiwTNs9dbiLrNuA7f3ZMAJ2w%253D%26srv%3Dbylepyau3ty4czmn77q4fglvperknl4bi2eb2fdy2bh4jxtf32kf73yd.onion">SimpleX Chat</a> or via email <a href="mailto:chat@simplex.chat">chat@simplex.chat</a>.</p>
+<p>Have a more specific question? Reach out to us via <a href="https://smp6.simplex.im/a#lrdvu2d8A1GumSmoKb2krQmtKhWXq-tyGpHuM7aMwsw">SimpleX Chat</a> or via email <a href="mailto:chat@simplex.chat">chat@simplex.chat</a>.</p>
 <p>For any sensitive questions please use SimpleX Chat or encrypted email messages using the key for this address from <a href="https://keys.openpgp.org/search?q=chat%40simplex.chat">keys.openpgp.org</a> (its fingerprint is <code>FB44 AF81 A45B DE32 7319 797C 8510 7E35 7D4A 17FC</code>) and make your key available for a secure reply.</p>
 </div>
                 </article>
