--- a/website/src/index.html
+++ b/website/src/index.html
@@ -71,7 +71,7 @@ active_home: true
                 <div class="content">
                     <h1>{{ "index-hero-h1" | i18n({}, lang) | safe }}</h1>
                     <h2 class="gradient-text">{{ "index-hero-h2" | i18n({}, lang) | safe }}</h2>
-                    <p>{{ "index-hero-p1" | i18n({}, lang) }}</p>
+                    <p>{{ "index-hero-p1" | i18n({}, lang) | safe }}</p>
 
                     <div class="socials">
                         <a href="/downloads" class="desktop-app-btn hidden" title="{{ 'index-hero-download-desktop-btn-title' | i18n({}, lang) }}">
